--- a/Fundamentals/src/app/events/event-details/event-details.component.html
+++ b/Fundamentals/src/app/events/event-details/event-details.component.html
@@ -60,7 +60,7 @@
       </div>
     </div>
 
-    <session-list [sortBy]="sortBy" [filterBy]="filterBy" *ngIf="!addMode" [sessions]
+    <session-list [eventId]="event?.id" [sortBy]="sortBy" [filterBy]="filterBy" *ngIf="!addMode" [sessions]
       ="event?.sessions"></session-list>
     <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)"
       (cancelAddSession)="cancelAddSession()"></create-session>
