--- a/Fundamentals/src/app/events/event-details/session-list.component.html
+++ b/Fundamentals/src/app/events/event-details/session-list.component.html
@@ -11,11 +11,11 @@
                 <i *ngIf="session.voters.length > 3" class="glyphicon glyphicon-fire" style="color:red"></i>
             </div>
             <div well-body>
-                <h6>{{session.presenter}}</h6>
-                <span>Duration: {{session.duration | duration}}</span><br />
-                <span>Level: {{session.level}}</span>
+                <h6 id="presenter">{{session.presenter}}</h6>
+                <span id="duration">Duration: {{session.duration | duration}}</span><br />
+                <span id="level">Level: {{session.level}}</span>
     
-                <p>{{session.abstract}}</p>
+                <p id="abstract">{{session.abstract}}</p>
             </div>
         </collapsible-well>
     </div>
